--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3998,6 +3998,6 @@ input, select, textarea {
 		background-color: #1d242a;
 	}
 
-	#about {
+	#about.wrapper.style1 {
 		background-color: #587973;
 	}
