--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2307,6 +2307,7 @@ input, select, textarea {
 		ul.icons li {
 			display: inline-block;
 			padding: 0 1em 0 0;
+			font-size: 5rem;
 		}
 
 			ul.icons li:last-child {
