--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2319,7 +2319,7 @@ input, select, textarea {
 		}
 
 			ul.icons.major li {
-				padding-right: 3.5em;
+				/* padding-right: 3.5em; */
 			}
 
 				@media screen and (max-width: 736px) {
