COMMENT BACK IN PADDING DECLARATION IN SCSS FILE

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -812,7 +812,7 @@
 			padding: 1em 0;
 
 			li {
-				// padding-right: 3.5em;
+				padding-right: 3.5em;
 
 				@include breakpoint('<=small') {
 					padding: 0 1em !important;
