--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2793,7 +2793,8 @@ input, select, textarea {
 	}
 
 		.wrapper > .inner {
-			width: 60em;
+			/* width: 60em; */
+			width: 85em;
 			margin: 0 auto;
 		}
 
