--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2306,7 +2306,7 @@ input, select, textarea {
 
 		ul.icons li {
 			display: inline-block;
-			padding: .5em 1em 0 0;
+			padding: .5em .5em 0 .5em;
 			font-size: 6rem;
 		}
 
@@ -2316,6 +2316,9 @@ input, select, textarea {
 
 		ul.icons.major {
 			padding: 1em 0;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
 		}
 
 			ul.icons.major li {
