--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2311,7 +2311,7 @@ input, select, textarea {
 		}
 
 			ul.icons li:last-child {
-				padding-right: 0 !important;
+				/* padding-right: 0 !important; */
 			}
 
 		ul.icons.major {
