ADD PICTURE OF ME AS BACKGROUND IMAGE

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3587,7 +3587,7 @@ input, select, textarea {
 		overflow: hidden;
 		position: relative;
 		text-align: center;
-		background-image: url('../../images/Screenshot 2021-11-09 153619.png');
+		background-image: url('../../images/IMG_9311.jpg');
 		background-size: cover;
 	}
 
